--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "react-d3-tree": "^1.16.1",
     "react-dom": "^16.12.0",
     "react-vis-force": "^0.3.1"
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0"
   }
 }
